# ScaleLat

./: CMakeLists.txt  LICENSE  README.md
in/: CONTCAR  benchmark.xyz  run.in  symmetry.in
in/potential/: Fe_Cr_Eich_2015_TBM_lammps.eam.alloy  README
include/: Mass_density_distribution.h  README  define.h  eam_alloy.h  eamforce.h  main.h  mapping.h  mc.h  measurement.h  nebrList.h  print.h  superCell.h  symmetry.h
src/: Mass_density_distribution.c  eam_alloy.c  eamforce.c  main.c  mapping.c  mc.c  measurement.c  nebrList.c  print.c  superCell.c  symmetry.c
