CMAKE_MINIMUM_REQUIRED (VERSION 3.5.1)
SET (TARGET "ISING")
PROJECT (${TARGET})
FILE (GLOB TARGET_SRC  "src/*.c")
MESSAGE (STATUS ${TARGET_SRC})
INCLUDE_DIRECTORIES (include)
SET (TARGET_SRC ${TARGET_SRC}  ${TARGET_INC})

LINK_LIBRARIES (m)

FIND_PACKAGE (OpenMP REQUIRED)
if (OPENMP_FOUND)
message ("OPENMP FOUND")
set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif ()

SET(CMAKE_C_FILAGS "$ENV{CFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_C_FLAGS_RELEASE "$ENV{CFLAGS} -DNODEBUG -O3 -Wall")
add_definitions ("-g")

ADD_EXECUTABLE (scalelat ${TARGET_SRC})
